WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120199
[GTK] Wrong interface version used in WebKitWebPage for loader client
https://bugs.webkit.org/show_bug.cgi?id=120199
Summary
[GTK] Wrong interface version used in WebKitWebPage for loader client
Carlos Garcia Campos
Reported
2013-08-22 23:18:25 PDT
We are currently using the interface version of the resource loader client instead.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2013-08-22 23:23:54 PDT
Committed
r154474
: <
http://trac.webkit.org/changeset/154474
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug