[GTK] Wrong interface version used in WebKitWebPage for loader client https://bugs.webkit.org/show_bug.cgi?id=120199

Reviewed by Gustavo Noronha Silva.

* WebProcess/InjectedBundle/API/gtk/WebKitWebPage.cpp:
(webkitWebPageCreate): Use kWKBundlePageLoaderClientCurrentVersion
instead of kWKBundlePageResourceLoadClientCurrentVersion in loader
client initialization.

Canonical link: https://commits.webkit.org/138133@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154474 268f45cc-cd09-0410-ab3c-d52691b4dbfc